neutrine: fixed wrong padding in appbar component

--- a/packages/neutrine/src/layout/appbar/style.scss
+++ b/packages/neutrine/src/layout/appbar/style.scss
@@ -6,8 +6,8 @@
     display: block;
     //position: sticky;
     top: 0px;
-    //padding-left: 15px;
-    //padding-right: 15px;
+    padding-left: 15px;
+    padding-right: 15px;
     //padding-top: 10px;
     //padding-bottom: 10px;
     height: 50px;
